# worshiphq

./: .env.example  .gitignore  UsersworshFORM-BACKUP-theophany-2026-07-19T08-34-24-724Z.json  WorshipHQ-Pastor-Walkthrough.pptx  next.config.ts  package-lock.json  package.json  vercel.json  ~$WorshipHQ-Pastor-Walkthrough.pptx
.claude/: launch.json
apps/desktop/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.electron.json  vite.config.ts
apps/desktop/electron/: data-handlers.ts  database.ts  main.ts  preload.ts  sync.ts
apps/desktop/src/: App.tsx  globals.css  main.tsx
apps/media/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/media/scripts/: build-kjv.mjs  build_bibles.py
apps/media/src/: App.tsx  main.tsx  styles.css  types.ts
apps/media/src-tauri/: Cargo.toml  tauri.conf.json
apps/media/src-tauri/icons/: icon.icns
apps/media/src-tauri/src/: bible.rs  lib.rs  licensing.rs  main.rs
prisma/: schema.prisma  seed.ts
public/: manifest.webmanifest  sw.js
public/scanner-agent/: whq-scanner-agent.py
scripts/: backfill-members.mjs
src/app/: globals.css  layout.tsx  loading.tsx
src/app/(auth)/: layout.tsx
src/app/(marketing)/: layout.tsx  page.tsx
src/components/: invite-accept-client.tsx
src/config/: brand.ts  marketing.ts  nav.ts  pricing.ts  sms.ts
src/hooks/: use-online.ts
src/lib/: audit.ts  auth.ts  biometric.ts  color.ts  db.ts  env.ts  password-policy.ts  permissions.ts  phone.ts  plan-gate-server.ts  plan-gate.ts  utils.ts
src/types/: paystack-inline.d.ts
(+393 files in other folders)
