[package]
name = "worshiphq-media"
version = "0.1.0"
description = "WorshipHQ Media — Church Presentation Software"
authors = ["WorshipHQ"]
edition = "2021"

[lib]
name = "worshiphq_media_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
